<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Light"
      >

    <Button
        android:id="@+id/info_pick_location"
        style="@style/TH.Button.Inverse.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/basic_blue_selector"
        android:drawableRight="@drawable/ic_action_maps_place"
        android:minHeight="@dimen/clickable_element_min_dimen"
        android:paddingLeft="@dimen/margin_small"
        android:text="@string/use_current_location"
        />

    <Button
        android:id="@+id/info_clear_all"
        style="@style/TH.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/clear_all"
        />

    <ProgressBar
        android:id="@+id/info_address_processing"
        style="?android:progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/info_clear_all"
        android:layout_toRightOf="@id/info_pick_location"
        android:visibility="gone"
        />

  </RelativeLayout>

  <ImageView
      android:layout_width="@dimen/size_12"
      android:layout_height="wrap_content"
      android:layout_gravity="left"
      android:layout_marginTop="@dimen/margin_xsmall"
      android:src="@drawable/powered_by_google_light"
      />

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        app:hintTextAppearance="@style/TH.Caption"
        >

        <EditText
            android:id="@+id/info_address_line1"
            style="@style/TH.LiveFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_1"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        app:hintTextAppearance="@style/TH.Caption"
        >

        <EditText
            android:id="@+id/info_address_line2"
            style="@style/TH.LiveFormField"
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:hint="@string/address_line_2"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        app:hintTextAppearance="@style/TH.Caption"
        >

        <EditText
            android:id="@+id/info_city"
            style="@style/TH.LiveFormField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:hint="@string/city"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView
        style="@style/TH.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:layout_marginLeft="4dp"
        android:text="@string/country"
        />

    <Spinner
        android:id="@+id/info_country"
        style="@style/TH.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
      />

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TH.Caption"
        >

        <EditText
            android:id="@+id/info_postal_code"
            style="@style/TH.LiveFormField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code"
            />

    </android.support.design.widget.TextInputLayout>

  <CheckBox
      android:id="@+id/info_less_than_a_year"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="@dimen/clickable_element_min_dimen"
      android:text="@string/address_less_than_1_year"
      />
</merge>