<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dummy_action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/navigation_logo"
            android:background="@color/tradehero_blue_status_bar" />

        <TextView
            style="@style/TH.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dummy_action_bar"
            android:background="@color/grey"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_xsmall"
            android:paddingLeft="@dimen/size_10"
            android:paddingRight="@dimen/size_10"
            android:paddingTop="@dimen/margin_xsmall"
            android:text="@string/live_5_steps_away"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/big_image_w_h"
            android:layout_height="@dimen/big_image_w_h"
            android:layout_alignParentLeft="true"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_small"
            android:src="@drawable/ic_free100"
            android:visibility="gone" />

        <ImageView
            android:id="@android:id/closeButton"
            style="@style/TH.Btn_Popup_Close.Inverse"
            android:layout_marginTop="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/TH.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:gravity="center_horizontal"
            android:maxWidth="300dp"
            android:text="@string/live_identity_prompt" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal"
            android:radius="15dp"
            android:background="@color/pale_yellow">

            <ImageView
                android:id="@+id/identity_prompt_image_specific"
                style="@style/TH.LiveIdentityPromptImage"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/ic_my"
                android:visibility="gone"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/identity_prompt_image_passport"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginLeft="@dimen/margin_medium"
                style="@style/TH.LiveIdentityPromptImage"
                android:layout_toRightOf="@id/identity_prompt_image_specific"
                android:src="@drawable/passport_my" />

            <Button
                android:id="@+id/identity_prompt_specific"
                style="@style/TH.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/identity_prompt_image_specific"
                android:layout_alignRight="@id/identity_prompt_image_specific"
                android:layout_below="@id/identity_prompt_image_specific"
                android:minHeight="@dimen/clickable_element_min_dimen"
                android:visibility="gone"
                tools:text="NRIC / Driver's License"
                tools:visibility="visible"
                android:background="@android:color/transparent" />

            <Button
                android:id="@+id/identity_prompt_passport"
                style="@style/TH.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/identity_prompt_image_passport"
                android:layout_alignRight="@id/identity_prompt_image_passport"
                android:layout_below="@id/identity_prompt_image_passport"
                android:background="@android:color/transparent"
                android:minHeight="@dimen/clickable_element_min_dimen"
                android:text="@string/any_passport" />

        </RelativeLayout>

        <Button
            android:id="@+id/identity_prompt_no"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            style="@style/TH.Button.Inverse.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/basic_green_selector"
            android:minHeight="@dimen/clickable_element_min_dimen"
            android:text="@string/enter_manually" />
    </LinearLayout>


</merge>